--- a/base.css
+++ b/base.css
@@ -65,85 +65,17 @@ a {
 }
 
 
-button.shake {
-  display: inline-block;
-  padding: 15px 25px;
-  font-size: 24px;
-  cursor: pointer;
-  text-align: center;
-  font-family: Helvetica, Arial, sans-serif;
-  text-decoration: none;
-  outline: none;
-  color: #fff;
-  background-color: #4CAF50;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
-  position: relative;
-  top: 40%;
-  left:25%;
+button {
+  background-color: whitesmoke;
+  padding: 10px;
+  vertical-align: top;
+  box-shadow: 2px 1px 2px gray;
+  margin: 4px 10px 4px 10px;
 }
 
-button.newGame {
-  display: inline-block;
-  padding: 15px 25px;
-  font-size: 24px;
-  cursor: pointer;
-  text-align: center;
-  font-family: Helvetica, Arial, sans-serif;
-  text-decoration: none;
-  outline: none;
-  color: #fff;
-  background-color:violet;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
-  position: relative;
-  top: 40%;
-  left:25%;
-}
-
-button.rainbow {
-  display: inline-block;
-  padding: 15px 25px;
-  font-size: 24px;
-  cursor: pointer;
-  text-align: center;
-  font-family: Helvetica, Arial, sans-serif;
-  text-decoration: none;
-  outline: none;
-  color: #fff;
-  background-color:goldenrod;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
-  position: relative;
-  top: 40%;
-  left:17.5%;
-}
-
-.shake:hover {background-color: #3e8e41}
-
-.shake:active {
-  background-color: #3e8e41;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-}
-
-.newGame:hover {background-color: palevioletred}
-
-.newGame:active {
-  background-color: palevioletred;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-}
-
-.rainbow:hover {background-color: coral}
-
-.rainbow:active {
-  background-color: goldenrod;
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
+button:active {
+  box-shadow: 0 0 0 white;
+  margin: 6px 10px 2px 10px;
 }
 
 
